Bug 414093 - When using smart newline in a list (itemize, enumerate) environement kile puts a "\" in stead of "\item"
Summary: When using smart newline in a list (itemize, enumerate) environement kile put...
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: editor (other bugs)
Version First Reported In: 2.9.93
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-13 12:43 UTC by simplelogin-newsletter.4hug0
Modified: 2019-12-30 08:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simplelogin-newsletter.4hug0 2019-11-13 12:43:04 UTC
SUMMARY
I use kile for creating documents. Shortcuts speed up my workflow quite a lot, one of the most used for me is the smart newline shortcut. As I use lists a lot, the fact that I can easily insert an "\item" makes my life a lot easier. However recently (since I reinstalled Manjaro) the smart newline function just inserts a "\" when I am using a list environment which is very inconvenient for me as it slows me down quite a bit, especially seen as I had become accustomed to the previous functionality.


STEPS TO REPRODUCE
1. Create a list (e.g. itemize) environment
2. Make a bullet point (\item Lorem)
3. Press shift+enter to activate smart newline (at least that is my shortcut I am not a 100% sure it is the default)

OBSERVED RESULT
Kile inserts a newline, the required indentation and a backslash "\" character

EXPECTED RESULT
Kile inserts a newline, the required indentation and a new bullet point "\item"

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:5.3.8.3-MANJARO (kernel)
(available in About System)
KDE Plasma Version: 5.17.2
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
Comment 1 Michel Ludwig 2019-12-30 08:27:08 UTC
Git commit 42ec22cce0ca73447ff6534574b64f3e2e29596f by Michel Ludwig.
Committed on 30/12/2019 at 08:26.
Pushed by mludwig into branch 'master'.

Use Kile's smart-new-line feature instead of KatePart's

M  +1    -6    src/kilestdactions.cpp
M  +10   -0    src/kileviewmanager.cpp

https://commits.kde.org/kile/42ec22cce0ca73447ff6534574b64f3e2e29596f