Use Kile's smart-new-line feature instead of KatePart's

BUG: 414093